mesh-service/gRPC/destinationrule.yaml
# destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grpc-dr
spec:
  host: grpc-service
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
      tcp:
        maxConnections: 100
