mesh-service/gRPC/virtualservice.yaml
# virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-vs
spec:
  hosts:
  - grpc-service
  http:
  - route:
    - destination:
        host: grpc-service
        port:
          number: 50051
